validating-admission-policies/pod-security/restricted/restrict-volume-types/restrict-volume-types.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-volume-types
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "!has(object.spec.volumes) || \
                   object.spec.volumes.all(vol, has(vol.configMap) || \
                   has(vol.csi) || \
                   has(vol.downwardAPI) || \
                   has(vol.emptyDir) || \
                   has(vol.ephemeral) || \
                   has(vol.persistentVolumeClaim) || \
                   has(vol.projected) || \
                   has(vol.secret))"
      message: "Only the following types of volumes may be used: configMap, csi, downwardAPI, emptyDir, ephemeral, persistentVolumeClaim, projected, and secret."
